--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div id="page-wrapper" >
+    
     <!-- content -->
     <div id="content" class="content_center">
         <router-outlet></router-outlet>
+        <report-panel></report-panel>
     </div>
-   
     <div id="footer" ></div>
 </div>
