Add dynamic bread crumb

--- a/public/css/pr.css
+++ b/public/css/pr.css
@@ -42,6 +42,11 @@ button{
     margin: 0em 0em 0em 0em;
     font: 13.3333px Arial;
 }
+
+.breadcrumb{
+    margin: 0px 10px;
+}
+
 .page-header{    
     border:             none;
     padding:            0px;
@@ -94,7 +99,6 @@ button{
 	background-color: #b2b8bc;
 }
 
-
 .list-group{
     margin-bottom:      0px;
 }
@@ -117,7 +121,9 @@ button{
     border:             1px solid #eee;
     border-left-width:  5px;
     border-radius:      3px;
-
+}
+div.showReportPanelLink{
+    margin-left: 12px;
 }
 button.showReportPanelLink{
     width: 140px;
@@ -145,3 +151,4 @@ button.showReportPanelLink{
     border-left-color:rgb(169, 8, 8);
     color:rgb(169, 8, 8);
 }
+
