--- a/src/app/component/cass-report.component.html
+++ b/src/app/component/cass-report.component.html
@@ -1,4 +1,4 @@
-<a href="home"><strong>Home</strong></a>
+<breadcrumb [levelBreadCrumb]=1 [reportNm]=reportNm ></breadcrumb>
 <spinning [showSpin]=showSpinning  (closeSpin)="closeSpinning($event)" ></spinning>
 <div class="content_center Criteria">
 <input type="hidden" id="reportSubmittedValue" name="reportSubmittedValue"/>
@@ -13,7 +13,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1>CASS Mail Report </h1>
+			<h1>CASS Mail Report</h1>
 			<hr>
 		</div>
 	</div>
