Adding spinner when waiting page, move position of report history, support UI IE9, changed send parameter to date instead of string, move asset from public to under src

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
     
     <!-- content -->
     <div id="content" class="content_center">
-        <router-outlet></router-outlet>
         <report-panel></report-panel>
+        <router-outlet></router-outlet>
+        <spinning-wait></spinning-wait>
     </div>
     <div id="footer" ></div>
+    
 </div>
